added all codes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>results-summary-component</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,6 +26,7 @@
             </div>
             </div>
             <h3 class="fitle-text">Summary</h3>
+            <div class="out-figure">
             <div class="figures">
                 <div class="figur1">
                     <div class="class">
@@ -33,7 +34,7 @@
                         <img src="./iconoir_flash.png" alt="" class="image">
                         <p class="text1">Reaction</p>
                     </div>
-                        <p class="text2">80 / 100</p>
+                        <p class="text2">80 <span>/ 100</span></p>
                     </div>
                 </div>
                 <div class="figur2">
@@ -42,7 +43,7 @@
                     <img src="./iconoir_brain.png" alt="" class="image">
                     <p class="text3">Memory</p>
                 </div>
-                    <p class="text4">92 / 100</p>
+                    <p class="text4">92 <span>/ 100</span></p>
                 </div>
                 </div>
                 <div class="figur3">
@@ -51,7 +52,7 @@
                     <img src="./iconoir_chat-remove.png" alt="" class="image">
                     <p class="text5">Verbal</p>
                 </div>
-                    <p class="text6">61 / 100</p>
+                    <p class="text6">61 <span>/ 100</span></p>
                 </div>
                 </div>
                 <div class="figur4">
@@ -60,11 +61,16 @@
                     <img src="./iconoir_eye-empty.png" alt="" class="image">
                     <p class="text7">Visual</p>
                 </div>
-                    <p class="text8">73 / 100</p>
+                    <p class="text8">73 <span>/ 100</span></p>
                 </div>
                 </div>
+                <div class="figur5">
+                    
+                   <a href="#!" class="btn">Continue</a>
+                
             </div>
         </div>
+    </div>
     </section>
 
 </body>
